# Newtork-Intrusion-Detection-System

./: CMakeLists.txt  PROJECT_STATUS.md  README.md  WINDOWS_BUILD.md  build.bat  build.sh
docs/: DESIGN.md  DNS_IMPLEMENTATION.md
include/: detector.hpp  dns_parser.hpp  packet_capture.hpp  utils.hpp
rules/: dns_rules.json
src/: detector.cpp  dns_parser.cpp  main.cpp  packet_capture.cpp  utils.cpp
tests/: test_dns_parser.cpp
tests/dns/: README.md
